# django-blog

./: .env.dist  .gitignore  Pipfile  README.md  build.sh  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  user_urls.py  views.py
accounts/static/accounts/js/: user_follow_list.js  user_follow_sidebar.js
accounts/templates/accounts/: base_dashboard.html  base_follow.html  base_user.html  dashboard.html  followers.html  followings.html  logout.html  profile.html  profile_edit.html  profile_follow_list.html  settings.html  user_about.html  user_base.html  user_comments.html  user_likes.html
accounts/templates/accounts/partials/: dashboard_nav_tab.html  user_follow_list.html  user_follow_list_row.html  user_follow_navigation.html  user_nav_breadcrumb.html  user_navigation.html  user_profile_sidebar.html
accounts/templates/accounts/registration/: login.html  logout.html  password_change_done.html  signup.html  (+6 more)
blogs/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blogs/templates/blogs/: comment_delete.html  comment_form.html  comment_update.html  comments.html  index.html  post_comments.html  post_comments_list.html  post_create.html  post_delete.html  post_detail.html  post_likes.html  post_list.html  post_update.html  search.html
blogs/templatetags/: pagination_tags.py
config/: settings.py  urls.py
static/css/: style.css
templates/: about.html  base.html
templates/contact/: contact_form.html  success.html
templates/errors/: 403.html  404.html
templates/partials/: footer.html  header.html  messages.html
(+7 files in other folders)
